implement restrict feature